--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -398,38 +398,39 @@
     <div class="container">
         <!-- The rest of your HTML content goes here -->
         <div class="header">
-            <div class="profile-pic" style="background-image: url('images/profile-pic.jpg');"></div>
+            <div class="profile-pic" style="background-image: url('');"></div>
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>Jillian Cariño</h1>
+        <p class="description">PUPBC DIT 1-1</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
-            <h3>DEVCON Affiliations:</h3>
+            <h3>School Attended</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>Polytechnic University of the Philippines - Biñan Campus</li>
+                <li>Sta. Catalina College-Biñan</li>
+                <li>Pagkakaisa Elementary School</li>
+                <li></li>
+                
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Hobbies</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>Play Volleyball</li>
+                <li>Jog/Walk</li>
+                <li>Play Online Games</li>
+                <li>Crochet</li>
             </ul>
         </div>
 
         <!-- Centered Links -->
         <div class="links">
             <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://github.com/jillyyyy"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://www.facebook.com/jilliancarinooo"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
