--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -398,7 +398,7 @@
     <div class="container">
         <!-- The rest of your HTML content goes here -->
         <div class="header">
-            <div class="profile-pic" style="background-image: url('');"></div>
+            <div class="profile-pic" style="background-image: url('profile-pic.jpg');"></div>
         </div>
 
         <!-- Placeholder for your name -->
@@ -428,7 +428,7 @@
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
+            <a href=""><i class="fab fa-linkedin"></i>LinkedIn</a>
             <a href="https://github.com/jillyyyy"><i class="fab fa-github"></i>GitHub</a>
             <a href="https://www.facebook.com/jilliancarinooo"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
