--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -428,7 +428,7 @@
 
         <!-- Centered Links -->
         <div class="links">
-            <a href=""><i class="fab fa-linkedin"></i>LinkedIn</a>
+            <a href="https://www.facebook.com/profile.php?id=61573462220583"><i class="fab fa-linkedin"></i>LinkedIn</a>
             <a href="https://github.com/jillyyyy"><i class="fab fa-github"></i>GitHub</a>
             <a href="https://www.facebook.com/jilliancarinooo"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
